<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo</string>
    <string name="hello">Hello heima!</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="image_content_description">There is no preview.</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string-array name="str_ary_demos">
        <item>Shape</item>
        <item>Sensor</item>
        <item>MediaPlayer</item>
        <item>Graphic</item>
        <item>Service</item>
        <item>AppMsg</item>
        <item>CustomBroadcast</item>
        <item>DrawerLayout</item>
        <item>SwipeRefreshLayout</item>
        <item>SmartImageView</item>
        <item>SimpleAdapter</item>
    </string-array>
    
    <string-array name="str_ary_tabs">
        <item>Tab One</item>
        <item>Tab Two</item>
        <item>Tab Three</item>
    </string-array>
    
    <string name="tv_guidance_tab1">Tab One</string>
    <string name="tv_guidance_tab2">Tab Two</string>
    <string name="tv_guidance_tab3">Tab Three</string>
	<string name="btn_guidance_click">Entrance</string>
	
	<string name="iv_drawer_layout_home">Home</string>
	
	<string name="btn_custom_broadcast_send">Trigger Custom Broadcast Events</string>
	
	<string name="btn_remote_binding_text1">Start Service</string>
	<string name="btn_remote_binding_text2">Stop Service</string>
	<string name="btn_remote_binding_text3">Bind Service</string>
	<string name="btn_remote_binding_text4">Execute Bind Service Method</string>
	<string name="btn_remote_binding_text5">Unbind Service</string>
	<string name="btn_remote_binding_text6">Remote Bind Service</string>
	<string name="btn_remote_binding_text7">Execute Remote Service Method</string>
	<string name="btn_remote_binding_text8">Execute Broadcast Service Method</string>
	
	<string name="btn_graphic_select">Select</string>
	<string name="et_graphic_hint_select">Please select a picture.</string>
	<string name="btn_graphic_zoom">Zoom</string>
	<string name="btn_graphic_rotate">Rotate</string>
	<string name="btn_graphic_trans">Trans</string>
	<string name="btn_graphic_save">Save</string>
	
	<string name="tv_media_player_music">Music</string>
	<string name="btn_media_player_play">Play</string>
	<string name="btn_media_player_pause">Pause</string>
	<string name="btn_media_player_goon">Goon</string>
	<string name="btn_media_player_replay">Replay</string>
	<string name="btn_media_player_stop">Stop</string>
	<string name="btn_media_player_shoot">Shoot</string>
	<string name="tv_media_player_video">Video</string>

</resources>