<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/btn_media_player_shoot"
        android:background="#88111000" />

    <Button
        android:id="@+id/btn_media_player_shoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_media_player_shoot" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/tv_media_player_music"
        android:background="#88111000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
        	android:id="@+id/btn_media_player_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_media_player_play" />

        <Button
        	android:id="@+id/btn_media_player_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_media_player_pause" />

        <Button
        	android:id="@+id/btn_media_player_replay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_media_player_replay" />

        <Button
        	android:id="@+id/btn_media_player_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_media_player_stop" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_media_player_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/tv_media_player_video"
        android:background="#88111000" />

    <SurfaceView
        android:id="@+id/sv_media_player_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp" />

</LinearLayout>
