<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidTools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    androidTools:context=".ui.GraphicActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/et_graphic_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/et_graphic_hint_select" />

        <Button
            android:onClick="select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/btn_graphic_select" />

    </RelativeLayout>
    

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical" >

	    <ImageView
	        android:id="@+id/iv_graphic_photo"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:contentDescription="@string/image_content_description"
	        android:src="@drawable/download" />

	    <SeekBar
	        android:id="@+id/sb_graphic_control"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

		<Button
		    android:onClick="zoom"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/btn_graphic_zoom" />

		<Button
		    android:onClick="rotate"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/btn_graphic_rotate" />

		<Button
		    android:onClick="trans"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/btn_graphic_trans" />

		<Button
		    android:onClick="save"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:text="@string/btn_graphic_save" />
        
    </LinearLayout>

</LinearLayout>
